2013-09-06  Per Bothner  <per@bothner.com>

	* ports.scm (display, write, write-simple, write-shared,
	write-with-shared-structure): Re-implement for R7RS write semantics.

2013-09-05  Per Bothner  <per@bothner.com>

	* bytevectors.scm ($make$bytevector$): New helper function
	for bytevector constructor function.
	(make-bytevector): Need to use U8Vector directly,
	instead of bytevector varargs constructor.

	* numbers.scm (quantity?, complex?, real?, rational?):
	Generalize so they return true for java.lang.Integer etc.
	(finite?, infinite?, nan?): Handle java.lang.Number objects
	that are not gnu.math.Complex.
	(java.lang.real?): New private helper method.

2013-09-03  Per Bothner  <per@bothner.com>

	* numbers.scm (real-part, imag-part, angle): Generalize to
	java.lang.Number (which are treated as real).

2013-09-01  Per Bothner  <per@bothner.com>

	* ports.scm (read-bytevector!): Fix parameter order.

	* ports.scm (u8-ready): Fix name to 'u8-ready?'.

2013-08-31  Per Bothner  <per@bothner.com>

	* misc.scm (features): New R7RS function.

	* std_syntax.scm (%case): Support => R7RS syntax in case expression.

2013-08-30  Per Bothner  <per@bothner.com>

	* numbers.scm (finite?): Generalize to complex.
	(infinite?): Likewise.
	(nan?): Likewise.

2013-08-25  Per Bothner  <per@bothner.com>

	* system.java (current-second, current-jiffy, jiffies-per-second):
	New procedures from R7RS.

	* misc.scm (boolean=?): New procedure from R7RS.

	* numbers.scm (square): New procedure from R7RS.
	* strings.scm (string-ref, string-copy): Generalize to CharSequence.
	(string->list): Take R7RS-style optional (start,end) bounds.
	(string-fill!): Likewise.
	(string-copy): Likewise.
	(string-copy!): New procedure from R7RS.

	* lists.scm (make-list): New procedure from R7RS.

	* ports.scm (textual-port?, binary-port?): Fix typos.

2013-05-10  Per Bothner  <per@bothner.com>

	* syntax.scm (%string-format-arg): Fix thinko - missing dot in list.